fixed persona tile alignments

--- a/caseStudyPage.css
+++ b/caseStudyPage.css
@@ -70,8 +70,8 @@ body {
 }
 
 .personaTile {
-  width: 94%;
-  margin: 5% 4% 5% 0%;
+  width: 66%;
+  margin: 3% 17% 3% 17%;
   box-shadow: 0px 7px 20px 0px rgba(0, 0, 0, 0.3);
 }
 
